--- a/results.Rmd
+++ b/results.Rmd
@@ -19,15 +19,15 @@ source("Scripts/07-stats_surface.R")
 
 ## Multi-choice feeding trials
 
-During the naive multi-choice feeding trial phase of the experiment, snowshoe hares ate an average of `r round(mean(sums$DMI_bw), digits = 2)` ± `r round(sd(sums$DMI_bw), digits = 2)` g DM/day across all diets. There was a significant effect of diet on intake rate during naive multi-choice trials (p = `r MCpval`). Out of all diets, hares ate the most from diet B. Intake rates by diet translated to average intakes of `r round(mean(sums$DMI_CP_bw), digits = 2)` ± `r round(sd(sums$DMI_CP_bw), digits = 2)` and `r round(mean(sums$DMI_NDF_bw), digits = 2)` ± `r round(sd(sums$DMI_NDF_bw), digits = 2)` g DM/day of CP and NDF, respectively (Figure 2, panel A). The target intake of naive hares fell between the nutritional rails of Diets B and C (Figure 2, panel B).
+During the naive multi-choice feeding trial phase of the experiment, snowshoe hares ate an average of `r round(mean(targets$DMI_bw), digits = 2)` ± `r round(sd(targets$DMI_bw), digits = 2)` g DM/day across all diets. There was a significant effect of diet on intake rate during naive multi-choice trials (p = `r MCpval`). Hares ate on average . Intake rates by diet translated to average intakes of `r round(mean(targets$DMI_CP_bw), digits = 2)` ± `r round(sd(targets$DMI_CP_bw), digits = 2)` and `r round(mean(targets$DMI_NDF_bw), digits = 2)` ± `r round(sd(targets$DMI_NDF_bw), digits = 2)` g DM/day of CP and NDF, respectively (Figure 2, panel A). The target intake of naive hares fell between the nutritional rails of Diets B and C (Figure 2, panel B).
 
 ## Single-choice feeding trials: results by treatment
 
-We conducted `r length(trials)` single-choice feeding trials on `r length(unique(trials$ID))` individuals. Hares ate on average `r round(mean(trials$DMI_bw), digits = 2)` g DM/kg/day of food across all diets. There was an overall significant effect of diet on intake rate (p = `r IRpval`; daily measure). According to the Tukey test, the intake rate for diet A differed significantly from all other diets while differences between diets B, C, and D were not significant (Figure 2, panel C). This pattern of intake rate resulted in hares on diets B and C to have CP and NDF intake rates closest to the target intake found in the multi-choice trials (Figure 2, panel D).
+We conducted `r length(trials)` single-choice feeding trials on `r length(unique(trials$ID))` individuals. Hares ate on average `r round(mean(trials$DMI_bw), digits = 2)` g DM/kg/day of food across all diets. The intake rate for diet A differed significantly from all other diets while differences between diets B, C, and D were not significant (Figure 2, panel C). This pattern of intake rate resulted in hares on diets B and C to have CP and NDF intake rates closest to the target intake found in the multi-choice trials (Figure 2, panel D).
 
-There was an overall significant effect of diet on weight change during feeding trials (p = `r WCpval`; trial measures). Diet A yielded the greatest weight loss over the three-day long trials (`r trials[Diet == "A", round(median(Weight_change)*100, digits = 2)]` %/day). Diets C and D caused slight weightloss; hares could only maintain their weight on diet B (`r trials[Diet == "B", round(median(Weight_change)*100, digits = 2)]` %/day; Figure 3). The Tukey test showed that weight change differed significantly between diet A and all other diets (Figure 3).
+There was an overall significant effect of diet on weight change during feeding trials (p = `r WCpval`; trial measures). Diet A yielded the greatest weight loss over the three-day long trials (`r trials[Diet == "A", round(median(Weight_change), digits = 2)]` %/day). Diets C and D caused slight weightloss; hares could only maintain their weight on diet B (`r trials[Diet == "B", round(median(Weight_change)*100, digits = 2)]` %/day; Figure 3). The Tukey test showed that weight change differed significantly between diet A and all other diets (Figure 3).
 
-Based on fecal composition and quantity, diet DMD followed a similar trend to weight change: diet A was significantly less digestible than all other diets. Diet B was also significantly less digestible than diet D. All other diet comparisons were not significant. Daily CP (p = `r CPdigpval`) and NDF (p = `r NDFdigpval`) digestion rates also difference between diets. CP digestibility increased significantly as diet CP increased from A to B (Figure 4). Diet A and B produced similar NDF digestive rates, which were significantly higher than that of diet C. There was no significant difference in NDF digestibility of diet D and the other three diets (Figure 4).
+Based on fecal composition and quantity, diet DMD followed a similar trend to weight change: diet A was significantly less digestible than all other diets. Diet B was also significantly less digestible than diet D. All other diet comparisons were not significant. Daily CP (p = `r CPdigpval`) and NDF (p = `r NDFdigpval`) digestion rates also differed between diets. CP digestibility increased significantly as diet CP increased from A to B (Figure 4). Diet A and B produced similar NDF digestive rates, which were significantly higher than that of diet C. There was no significant difference in NDF digestibility of diet D and the other three diets (Figure 4).
 
 ## Single-choice feeding trials: results by nutrient intake
 
