--- a/results.Rmd
+++ b/results.Rmd
@@ -17,13 +17,13 @@ source("Scripts/07-stats_surface.R")
 
 ## Multi-choice feeding trials
 
-During the naive multi-choice feeding trial phase of the experiment, snowshoe hares ate an average of `r round(mean(targets$DMI_bw), digits = 2)` ± `r round(sd(targets$DMI_bw), digits = 2)` g DM/kg\^0.75/day across all diets. There was a significant effect of diet on intake rate during naive multi-choice trials (p = `r MCpval`): hares ate `r effectofB` times more of diet B than the average diet intake rate. Intake rates by diet translated to average intakes of `r round(mean(targets$DMI_CP_bw), digits = 2)` ± `r round(sd(targets$DMI_CP_bw), digits = 2)` and `r round(mean(targets$DMI_NDF_bw), digits = 2)` ± `r round(sd(targets$DMI_NDF_bw), digits = 2)` g DM/kg\^0.75/day of CP and NDF, respectively (Figure 2, panel A). When plotted in nutritional space, i.e., CP and NDF intake rates, the average feeding response of hares fell between the nutritional rails of Diets B and C (Figure 2, panel B). We can use this as an estimate of the target intake of CP and NDF for hares under these conditions.
+During the naive multi-choice feeding trial phase of the experiment, snowshoe hares ate an average of `r round(mean(targets$DMI_bw), digits = 1)` ± `r round(sd(targets$DMI_bw), digits = 1)` g DM/kg\^0.75/day across all diets. There was a significant effect of diet on intake rate during naive multi-choice trials (p = `r MCpval`). hares ate `r effectofB` times more of diet B than the average diet intake rate. Intake rates by diet translated to average intakes of `r round(mean(targets$DMI_CP_bw), digits = 1)` ± `r round(sd(targets$DMI_CP_bw), digits = 1)` and `r round(mean(targets$DMI_NDF_bw), digits = 1)` ± `r round(sd(targets$DMI_NDF_bw), digits = 1)` g DM/kg\^0.75/day of CP and NDF, respectively (Figure 2, panel A). When plotted in nutritional space, i.e., CP and NDF intake rates, the average feeding response of hares fell between the nutritional rails of Diets B and C (Figure 2, panel B). We can use this as an estimate of the target intake of CP and NDF for hares under these conditions.
 
 ## Single-choice feeding trials: results by treatment
 
-We conducted `r length(trials)` single-choice feeding trials on `r length(unique(trials$ID))` individuals. Hares ate on average `r round(mean(trials$DMI_bw), digits = 2)` g DM/kg\^0.75/day of food across all diets. The intake rate for diet A was `r effectofA` times more than the average of all diets while differences between diets B, C, and D were not significant (Figure 2, panel C). This pattern of intake rate resulted in hares on diets B and C to have CP and NDF intake rates closest to the target intake found in the multi-choice trials (Figure 2, panel D).
+We conducted `r length(trials)` single-choice feeding trials on `r length(unique(trials$ID))` individuals. Hares ate on average `r round(mean(trials$DMI_bw), digits = 1)` g DM/kg\^0.75/day of food across all diets. The intake rate for diet A was `r effectofA` times more than the average of all diets while differences between diets B, C, and D were not significant (Figure 2, panel C). This pattern of intake rate resulted in hares on diets B and C to have CP and NDF intake rates closest to the target intake found in the multi-choice trials (Figure 2, panel D).
 
-There was an overall significant effect of diet on weight change during feeding trials (p = `r WCpval`; trial measures). Diet A caused significantly more weight loss over the three-day long trials than other diets (`r trials[Diet == "A", round(median(Weight_change), digits = 2)]` %/day). Diets B, C and D allowed hares to endure minimal weight loss during the trial.
+There was an overall significant effect of diet on weight change during feeding trials (p = `r WCpval`; trial measures). Diet A caused significantly more weight loss over the three-day long trials than other diets (`r trials[Diet == "A", round(median(Weight_change), digits = 1)]` %/day). Diets B, C and D allowed hares to endure minimal weight loss during the trial.
 
 Based on fecal composition and quantity, diet DMD followed a similar trend to weight change: diet A was significantly less digestible than all other diets. Diet B was also significantly less digestible than diet D. All other diet comparisons were not significant. Daily CP (p = `r CPdigpval`) and NDF (p = `r NDFdigpval`) digestion rates also differed between diets. CP digestibility increased significantly as diet CP increased from A to B (Figure 4). Diet A and B produced similar NDF digestive rates, which were significantly higher than that of diet C. There was no significant difference in NDF digestibility of diet D and the other three diets (Figure 4).
 
