rewrite surface stat results

--- a/results.Rmd
+++ b/results.Rmd
@@ -29,7 +29,9 @@ Based on fecal composition and quantity, diet DMD followed a similar trend to we
 
 ## Single-choice feeding trials: results by nutrient intake
 
-We used GAMs and thin-spline surface plots to investigate qualitative relationships between protein and fibre intake, both as crude and digestible measures, and weight change. We also assessed how protein and fibre intake affected total DMD. In terms of crude macronutrients, the heat map shows that hares begin to maintain weight as protein intake increases, at approximately 10 g DM/kg\^0.75/day, but only at mid ranges of fibre intake. After protein intake reaches about 14 g DM/kg\^0.75/day, fibre intake becomes irrelevant (Figure 5). At highest fibre intake rates relative to protein intake we see the highest weight loss. The GAM for this pattern showed that the interacting effects of protein and fibre intake were significant toward weight change and that this relationship was non-linear (edf \> 10); together this interaction explained `r round(sum$dev.expl, 2)*100`% of the deviation (Table 2). The effect of digestible macronutrient intake on weight change shows a similar response to that of crude macronutrient, but with highest performance occurring from a more balanced intake of digestible protein and digestible fibre (Figure 5). This is further expressed with a higher edf in the GAM output, which means the effect is more non-linear. Together this interaction explained `r round(sum2$dev.expl, 2)*100`% of the deviation (Table 2). Lastly, the relationship between DMD and protein-fibre intake is the most non-linear of the three models, with the highest edf and the highest deviation explained (`r round(sum3$dev.expl, 2)*100`%; Table 2). Figure 5 displays this, with higher digestibility occurring as the ratio of protein to fibre intake increases.
+We used GAMs and thin-spline surface plots to investigate qualitative relationships between protein, fibre, and energy intake, both as crude and digestible measures, and weight change. In terms of CP and NDF, the surface map shows that hares begin to maintain weight as protein intake increases, at approximately 9 g DM/kg^0.75^/day, but only at mid ranges of NDF intake. Once NDF intake surpassed \~ 65 g DM/kg^0.75^/day, weight loss occurred regardless of protein intake (Figure 5A). The GAM for this surface map pattern found non-linear effects of NDF and CP on weight change, but not for their interaction (rsq = `r round(sumCNDF$rsq, 2)` ; deviation explained = `r round(sumCNDF$dev.expl, 2)`; Table 2). Surface maps for intake of crude protein and energy showed a similar pattern as with protein and NDF (Figure 5B; rsq = `r round(sumCE$rsq, 2)` ; deviation explained = `r round(sumCE$dev.expl, 2)`; Table 2). The surface plot for intake of digestible NDF and protein on eight change showed a greater protein limitation than when assessed in crude terms. In this case, there are two clear areas where weight maintenance occurs at low fibre intake (Figure 5C).
+
+After protein intake reaches about 14 g DM/kg\^0.75/day, fibre intake becomes irrelevant (Figure 5). At highest fibre intake rates relative to protein intake we see the highest weight loss. The GAM for this pattern showed that the interacting effects of protein and fibre intake were significant toward weight change and that this relationship was non-linear (edf \> 10); together this interaction explained `r round(sum$dev.expl, 2)*100`% of the deviation (Table 2). The effect of digestible macronutrient intake on weight change shows a similar response to that of crude macronutrient, but with highest performance occurring from a more balanced intake of digestible protein and digestible fibre (Figure 5). This is further expressed with a higher edf in the GAM output, which means the effect is more non-linear. Together this interaction explained `r round(sum2$dev.expl, 2)*100`% of the deviation (Table 2). Lastly, the relationship between DMD and protein-fibre intake is the most non-linear of the three models, with the highest edf and the highest deviation explained (`r round(sum3$dev.expl, 2)*100`%; Table 2). Figure 5 displays this, with higher digestibility occurring as the ratio of protein to fibre intake increases.
 
 ![Figure 2. Feeding responses (g dry matter/kg\^0.75/day) by snowshoe hares during both the naiive multi-choice (C and D; n = 15) and the single-choice (A and B; n = 99) feeding trial experiments. Diets A, B, C, and D had crude protein (CP) to neutral detergent fibre (NDF) ratios of 0.083, 0.22, 0.36, and 0.5 respectively. Panels A and C show mean intake rates by diet in the multi-choice and single choice scenarios, respectively (error bars = standard deviation). Panels B and D show intake rates in nutrient space where diet rails (CP:NDF) are represented by black lines. In Panel B, black points represent the total CP and NDF intake by individuals in multi-choice trials, summing their intake of all diets. The cross point represents the mean CP and NDF intake across all hares, i.e., a potential target intake. Panel D shows mean intake rates (error bars = standard deviation) along the diet rails as CP intake against NDF intake.](Output/figures/intakebarandrail.jpeg)
 
