rewrite single choice treatment results

--- a/results.Rmd
+++ b/results.Rmd
@@ -21,11 +21,9 @@ In multi-choice trials, snowshoe hares ate an average of `r round(mean(targets$D
 
 ## Single-choice feeding trials: results by treatment
 
-We conducted `r length(trials)` single-choice feeding trials on `r length(unique(trials$ID))` individuals. Hares ate on average `r round(mean(trials$DMI_bw), digits = 1)` g DM/kg\^0.75/day of food across all diets. The intake rate for diet A was `r effectofA` times more than the average of all diets while differences between diets B, C, and D were not significant (Figure 2, panel C). This pattern of intake rate resulted in hares on diets B and C to have CP and NDF intake rates closest to the target intake found in the multi-choice trials (Figure 2, panel D).
+We conducted `r length(trials)` single-choice feeding trials on `r length(unique(trials$ID))` individuals. Hares ate on average `r round(mean(trials$DMI_bw), digits = 1)` g DM/kg\^0.75/day of feed across all diets. The intake rate for Diet A was significantly higher than all other diets (p \< 0.001), while there was no difference between diets B, C, and D. The greatest difference was between Diet A and C, with hares eating `r diffAtoC` times more of A than C. This pattern of intake rate resulted in hares on diets B and C having CP and NDF intake rates closest to the target intake found in the multi-choice trials Figure 2D). Diet did impact hare weight change during feeding trials (p = `r WCpval`; trial measures). Diet A caused the most weight loss (`r trials[Diet == "A", round(median(Weight_change), digits = 1)]` %/day) over the three-day feeding trial compared to other diets (Figures 3). Diets B, C and D allowed hares to experience little weight loss during the trial, and the mean of Diet B even showed positive weight change (Figure 3).
 
-There was an overall significant effect of diet on weight change during feeding trials (p = `r WCpval`; trial measures). Diet A caused significantly more weight loss over the three-day long trials than other diets (`r trials[Diet == "A", round(median(Weight_change), digits = 1)]` %/day). Diets B, C and D allowed hares to endure minimal weight loss during the trial.
-
-Based on fecal composition and quantity, diet DMD followed a similar trend to weight change: diet A was significantly less digestible than all other diets. Diet B was also significantly less digestible than diet D. All other diet comparisons were not significant. Daily CP (p = `r CPdigpval`) and NDF (p = `r NDFdigpval`) digestion rates also differed between diets. CP digestibility increased significantly as diet CP increased from A to B (Figure 4). Diet A and B produced similar NDF digestive rates, which were significantly higher than that of diet C. There was no significant difference in NDF digestibility of diet D and the other three diets (Figure 4).
+Based on fecal composition and quantity, diet DMD followed a similar trend to weight change: diet A was less digestible than all other diets (p \< 0.001). Diet B was also significantly less digestible than diet D (p \< 0.01; Figure 4A). Daily CP (p = `r CPdigpval`) and NDF (p = `r NDFdigpval`) digestion rates also differed between diets. CP digestibility increased significantly as diet CP increased from A to B (p \< 0.001; Figure 4B). Diet A had higher NDF digestibility than Diet C (P \< 0.01) and Diet D (P \< 0.05; Figure 4C). Diet A had a similar NDF digestion rate to Diet B, which was significantly higher than that of Diet C (p \< 0.01, Figure 4C).
 
 ## Single-choice feeding trials: results by nutrient intake
 
