update gam results

--- a/results.Rmd
+++ b/results.Rmd
@@ -23,13 +23,17 @@ In multi-choice trials, snowshoe hares ate an average of `r round(mean(targets$D
 
 We conducted `r length(trials)` single-choice feeding trials on `r length(unique(trials$ID))` individuals. Hares ate on average `r round(mean(trials$DMI_bw), digits = 1)` g DM/kg\^0.75/day of feed across all diets. The intake rate for Diet A was significantly higher than all other diets (p \< 0.001), while there was no difference between diets B, C, and D. The greatest difference was between Diet A and C, with hares eating `r diffAtoC` times more of A than C. This pattern of intake rate resulted in hares on diets B and C having CP and NDF intake rates closest to the target intake found in the multi-choice trials Figure 2D). Diet did impact hare weight change during feeding trials (p = `r WCpval`; trial measures). Diet A caused the most weight loss (mean = `r trials[Diet == "A", round(mean(Weight_change), digits = 1)]` %/day) over the three-day feeding trial, significantly more weight loss than all other diets (Figures 3). Diet B resulted in the best outcome: slight weight increase with a mean of `r trials[Diet == "A", round(mean(Weight_change), digits = 1)]` %/day (Figure 3). There was no difference between weight change of Diets B, C and D (Figure 3).
 
-Based on fecal composition and quantity, diet DMD differed across diets with Diet D being the most digestible and Diet A being the least (p \< 0.001; Figure 4A). Diet A had significantly lower DMD than all other diets (p \< 0.001), and Diet B was also significantly less digestible than diet D (p \< 0.01; Figure 4A). Daily CP (p = `r CPdigpval`) and NDF (p = `r NDFdigpval`) digestion rates also differed between diets. CP digestibility increased significantly as diet CP increased from A to D (p \< 0.001; Figure 4B). Diet D had \_\_\_\_ times greater protein digestibility than Diet A. Diet A had the highest NDF digestibility, \_\_\_\_ times greater than Diet C (P \< 0.01) and \_\_\_\_ times greater than Diet D (P \< 0.05; Figure 4C). Diet B had \_\_\_\_ times the NDF digestibility of Diet C (p \< 0.01, Figure 4C).
+Based on fecal composition and quantity, diet DMD differed across diets with Diet D being the most digestible and Diet A being the least (p \< 0.001; Figure 4A). Diet A had significantly lower DMD than all other diets (p \< 0.001), and Diet B was also significantly less digestible than diet D (p \< 0.01; Figure 4A). Daily CP (p = `r CPdigpval`) and NDF (p = `r NDFdigpval`) digestion rates also differed between diets. CP digestibility increased significantly as diet CP increased from A to D (p \< 0.001; Figure 4B). Diet D had `r diffDtoAcp` times greater protein digestibility than Diet A. Diet A had the highest NDF digestibility, `r diffAtoCndf` times greater than Diet C (P \< 0.01) and `r diffAtoDndf` times greater than Diet D (P \< 0.05; Figure 4C). Diet B had `r diffBtoCndf` times the NDF digestibility of Diet C (p \< 0.01, Figure 4C).
 
 ## Single-choice feeding trials: results by nutrient intake
 
-We used GAMs and thin-spline surface plots to investigate qualitative relationships between protein, fibre, and energy intake, both as crude and digestible measures, and weight change. In terms of CP and NDF, the surface map shows that hares begin to maintain weight as protein intake increases, at approximately 9 g DM/kg^0.75^/day, but only at mid ranges of NDF intake. Once NDF intake surpassed \~ 65 g DM/kg^0.75^/day, weight loss occurred regardless of protein intake (Figure 5A). The GAM for this surface map pattern found non-linear effects of NDF and CP on weight change, but not for their interaction (rsq = `r round(sumCNDF$rsq, 2)` ; deviation explained = `r round(sumCNDF$dev.expl, 2)`; Table 2). Surface maps for intake of crude protein and energy showed a similar pattern as with protein and NDF (Figure 5B; rsq = `r round(sumCE$rsq, 2)` ; deviation explained = `r round(sumCE$dev.expl, 2)`; Table 2). The surface plot for intake of digestible NDF and protein on eight change showed a greater protein limitation than when assessed in crude terms. In this case, there are two clear areas where weight maintenance occurs at low fibre intake (Figure 5C).
+In terms of CP and NDF, hares begin to maintain weight as protein intake increases, at approximately 9 g DM/kg^0.75^/day, but only at mid ranges of NDF intake, inbetween the rails of diets B, C, and D. Once NDF intake surpassed \~ 65 g DM/kg^0.75^/day, weight loss occurred regardless of protein intake (Figure 5A). The GAM for this surface map pattern found non-linear effects of NDF and CP on weight change, but not for their interaction (rsq = `r round(sumCNDF$r.sq, 2)` ; deviation explained = `r round(sumCNDF$dev.expl, 2)`; Table 2).
 
-After protein intake reaches about 14 g DM/kg\^0.75/day, fibre intake becomes irrelevant (Figure 5). At highest fibre intake rates relative to protein intake we see the highest weight loss. The GAM for this pattern showed that the interacting effects of protein and fibre intake were significant toward weight change and that this relationship was non-linear (edf \> 10); together this interaction explained `r round(sum$dev.expl, 2)*100`% of the deviation (Table 2). The effect of digestible macronutrient intake on weight change shows a similar response to that of crude macronutrient, but with highest performance occurring from a more balanced intake of digestible protein and digestible fibre (Figure 5). This is further expressed with a higher edf in the GAM output, which means the effect is more non-linear. Together this interaction explained `r round(sum2$dev.expl, 2)*100`% of the deviation (Table 2). Lastly, the relationship between DMD and protein-fibre intake is the most non-linear of the three models, with the highest edf and the highest deviation explained (`r round(sum3$dev.expl, 2)*100`%; Table 2). Figure 5 displays this, with higher digestibility occurring as the ratio of protein to fibre intake increases.
+Surface maps for intake of crude protein and energy showed a similar pattern as with protein and NDF, indicating greater protein limitation than energy limitation (Figure 5B; rsq = `r round(sumCE$r.sq, 2)` ; deviation explained = `r round(sumCE$dev.expl, 2)`). The GAM associated with this surface map shows CP intake to have a significant, non-linear effect on weight change (Table 2).
+
+The interaction between digestible NDF and digestible protein intake was significant and non-linear toward predicting weight loss (rsq = `r round(sumDNDF$r.sq, 2)` ; deviation explained = `r round(sumDNDF$dev.expl, 2)`; Table 2). The surface map for this model shows three "hot spots" within nutritional space where weight maintenance occurs: at two levels of DP intake when DNDF intake was under 10 g DM/kg^0.75^/day, and one area of lower DP intake but higher DNDF intake by the Diet A rail (Figure 5C).
+
+The surface map for digestible energy and protein intake shows one area in the centre of the plot, between diets B and C where weight maintenance can occur, and again at the highest levels of DP intake, toward the highest intakes on Diet D (Figure 5D). The GAM for this map showed DP intake to have a significant, non-linear effect on weight change (rsq = `r round(sumDE$r.sq, 2)` ; deviation explained = `r round(sumDE$dev.expl, 2)`; Table 2)
 
 ![Figure 2. Feeding responses (g dry matter/kg\^0.75/day) by snowshoe hares during both the naiive multi-choice (C and D; n = 15) and the single-choice (A and B; n = 99) feeding trial experiments. Diets A, B, C, and D had crude protein (CP) to neutral detergent fibre (NDF) ratios of 0.083, 0.22, 0.36, and 0.5 respectively. Panels A and C show mean intake rates by diet in the multi-choice and single choice scenarios, respectively (error bars = standard deviation). Panels B and D show intake rates in nutrient space where diet rails (CP:NDF) are represented by black lines. In Panel B, black points represent the total CP and NDF intake by individuals in multi-choice trials, summing their intake of all diets. The cross point represents the mean CP and NDF intake across all hares, i.e., a potential target intake. Panel D shows mean intake rates (error bars = standard deviation) along the diet rails as CP intake against NDF intake.](Output/figures/intakebarandrail.jpeg)
 
